adiciona css reset

--- a/personalidade/nina-simone/index.html
+++ b/personalidade/nina-simone/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Roboto+Slab:700|Roboto:400,400i"
 		rel="stylesheet">
+	<link rel="stylesheet" href="css/CSSReset.css" />
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -78,7 +79,7 @@
 			<div class="autora__flex-container">
 				<img class="autora__img" src="./img/autora.png" alt="Foto da autora" title="Foto da autora">
 				<div class="autora__descricao">
-					<p>Autora: Brennda Farinha</p>
+					<a href="../../autora/brennda-farinha/index.html">Brennda Farinha</a>
 					<p>Desenvolvedora Front-end</p>
 					<a href="https://github.com/itsfarinha">Link para o Github</a>
 				</div>
